hphp/test/zend7/Zend/tests/str_offset_002.php.expectf

Fatal error: %s
Stack trace:
#0 {main}
  thrown in %sstr_offset_002.php on line 3